fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
 .paymentOptions{
     inline-size: fit-content;
 }
-label{
-    font-weight: 600;
-}
